subscriptions: Fix success alert
The dismiss button for the alert was out of bounds. Also simplify the css.

Fixes #4210

--- a/pkg/subscriptions/subscriptions.css
+++ b/pkg/subscriptions/subscriptions.css
@@ -19,10 +19,6 @@
 
 /* ---------------------------------------------------------------------------------------------------- */
 
-.container-fluid.alert-dismissible > button > span.pficon {
-    vertical-align: middle;
-}
-
 .container-fluid.alert {
     margin: 20px;
 }
@@ -32,17 +28,9 @@
     margin: 0px auto;
 }
 
-.subscriptions-emphasize {
-    font-weight: bold;
-}
-
 .subscriptions-block-center {
     display: block;
     text-align: center;
-}
-
-.container-fluid > span:not(:first-child) {
-    padding-left: 10px;
 }
 
 #registration-url-field > .bootstrap-select {
